power: Do not use G_DBUS_PROXY_FLAGS_DO_NOT_LOAD_PROPERTIES when we want to read properties

Hopefully resolves https://bugzilla.gnome.org/show_bug.cgi?id=659066